add-index-thumb-+-add-kanto-page

--- a/index.html
+++ b/index.html
@@ -32,28 +32,38 @@
                             style="width: 5rem;"></a>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-between bg-danger" id="navbarSupportedContent">
 
                     <ul class="navbar-nav align-items-center fs-4">
 
-                        <li class="nav-item ">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="#"><img
+                                    src="assets/Pokeball.png" style="width: 5rem;" alt=""></a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active text-white" href="#">Link</a>
+                            <a class="nav-link active text-white" href="https://www.serebii.net/"
+                                target="_blank">Serebii</a>
                         </li>
 
-                        <li class="nav-item dropdown" >
+                        <li class="nav-item dropdown">
 
                             <a class="nav-link dropdown-toggle text-white " href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Starters
                             </a>
 
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item text-white bg-black" href="#">Action</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Another action</a></li>
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="pages/starter-kanto.html">Kanto</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 2</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 3</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 4</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 5</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 6</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 7</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 8</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 9</a></li>
                                 <li>
                                     <hr class="dropdown-divider bg-black">
                                 </li>
@@ -70,89 +80,57 @@
 
     <main>
 
+
+        <div class="text-white text-center">
+            <h1>Starter Pokémon</h1>
+            <h2>Choose Your Region</h2>
+        </div>
         <div class="d-flex align-items-center justify-content-center">
 
             <div class="d-flex flex-wrap card-container">
 
-                <div class="card">
+                <a class="link-card" href="pages/starter-kanto.html">
+                    <div class="card w-100">
 
-                    <div class="card-img">
-                        <img src="assets/bulbasaur.png" class="card-img-top" alt="...">
+                        <div class="card-img">
+                            <img class="blur" src="assets/kanto-starter/kanto-starters.png" class="card-img-top" alt="...">
+                        </div>
+
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Kanto Starters</h5>
+                        </div>
                     </div>
+                </a>
 
-                    <div class="card-body">
-                        <h5 class="card-title">Bulbasaur</h5>
-                        <p class="card-text">Bulbasaur can be seen napping in bright sunlight. There is a seed on its
-                            back.
-                            By soaking up the sun's rays, the seed grows progressively larger.</p>
+                <a class="link-card" href="">
+                    <div class="card w-100">
+
+                        <div class="card-img">
+                            <img class="blur" src="assets/johto-starter/johto-starter.jpg" class="card-img-top" alt="...">
+                        </div>
+
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Johto Starters</h5>
+                        </div>
                     </div>
+                </a>
 
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                <a class="link-card" href="">
+                    <div class="card w-100">
+
+                        <div class="card-img">
+                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.jpg" class="card-img-top" alt="...">
+                        </div>
+
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Hoenn Starter</h5>
+                        </div>
                     </div>
+                </a>
 
-                </div>
-
-                <div class="card">
-
-                    <div class="card-img">
-                        <img src="assets/queirtle.png" class="card-img-top" alt="...">
-                    </div>
-
-                    <div class="card-body">
-                        <h5 class="card-title">Squirtle</h5>
-                        <p class="card-text">Squirtle. This Tiny Turtle Pokémon draws its long neck into its shell to
-                            launch
-                            incredible water attacks with amazing range and accuracy.The blasts can be quite powerful.
-                        </p>
-                    </div>
-
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-
-                </div>
-
-                <div class="card">
-
-                    <div class="card-img">
-                        <img src="assets/charmander.png" class="card-img-top" alt="...">
-                    </div>
-
-                    <div class="card-body">
-                        <h5 class="card-title">Charmander</h5>
-                        <p class="card-text">The flame that burns at the tip of its tail is an indication of its
-                            emotions.
-                            The flame wavers when Charmander is enjoying itself. If the Pokémon becomes enraged, the
-                            flame
-                            burns fiercely.</p>
-                    </div>
-
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-
-                 <div class="card">
-
-                    <div class="card-img">
-                        <img src="assets/bulbasaur.png" class="card-img-top" alt="...">
-                    </div>
-
-                    <div class="card-body">
-                        <h5 class="card-title">Bulbasaur Branch</h5>
-                        <p class="card-text">Bulbasaur can be seen napping in bright sunlight. There is a seed on its
-                            back.
-                            By soaking up the sun's rays, the seed grows progressively larger.</p>
-                    </div>
-
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-
-                </div>
             </div>
         </div>
+
     </main>
 
     <footer>
