--- a/pages/starter-kanto.html
+++ b/pages/starter-kanto.html
@@ -38,7 +38,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link active text-white" aria-current="page" href="/index.html"><img
-                                    src="/assets/Pokeball.png" style="width: 5rem;" alt=""></a>
+                                    src="/pokemon-cards-boostrap/assets/Pokeball.png" style="width: 5rem;" alt=""></a>
                         </li>
 
                         <li class="nav-item">
@@ -88,7 +88,7 @@
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/assets/kanto-starter/bulbasaur.png" class="card-img-top" alt="...">
+                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/bulbasaur.png" class="card-img-top" alt="...">
                         </div>
 
                         <div class="card-body">
@@ -109,7 +109,7 @@
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/assets/kanto-starter/queirtle.png" class="card-img-top" alt="...">
+                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/queirtle.png" class="card-img-top" alt="...">
                         </div>
 
                         <div class="card-body">
@@ -132,7 +132,7 @@
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/assets/kanto-starter/charmander.png" class="card-img-top" alt="...">
+                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/charmander.png" class="card-img-top" alt="...">
                         </div>
 
                         <div class="card-body">
@@ -154,7 +154,7 @@
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/assets/kanto-starter/pikachu.png" class="card-img-top" alt="...">
+                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/pikachu.png" class="card-img-top" alt="...">
                         </div>
 
                         <div class="card-body">
@@ -176,7 +176,7 @@
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/assets/kanto-starter/eevee.png" class="card-img-top" alt="...">
+                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/eevee.png" class="card-img-top" alt="...">
                         </div>
 
                         <div class="card-body">
