--- a/pages/starter-kanto.html
+++ b/pages/starter-kanto.html
@@ -28,7 +28,7 @@
                 <button class="navbar-toggler border-5 border-white p-0 w-100 justify-content-end" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <a class="navbar-brand" href="#"><img src="/assets/Pokeball.png" alt="logo" title="logo"
+                    <a class="navbar-brand" href="#"><img src="/pokemon-cards-boostrap/assets/Pokeball.png" alt="logo" title="logo"
                             style="width: 5rem;"></a>
                 </button>
 
