--- a/pages/starter-kanto.html
+++ b/pages/starter-kanto.html
@@ -37,7 +37,7 @@
                     <ul class="navbar-nav align-items-center fs-4">
 
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="/index.html"><img
+                            <a class="nav-link active text-white" aria-current="page" href="/pokemon-cards-boostrap/index.html"><img
                                     src="/pokemon-cards-boostrap/assets/Pokeball.png" style="width: 5rem;" alt=""></a>
                         </li>
 
