--- a/pages/starter-kanto.html
+++ b/pages/starter-kanto.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/pokemon-cards-boostrap/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
@@ -28,7 +28,7 @@
                 <button class="navbar-toggler border-5 border-white p-0 w-100 justify-content-end" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <a class="navbar-brand" href="#"><img src="/pokemon-cards-boostrap/assets/Pokeball.png" alt="logo" title="logo"
+                    <a class="navbar-brand" href="#"><img src="./assets/Pokeball.png" alt="logo" title="logo"
                             style="width: 5rem;"></a>
                 </button>
 
@@ -38,7 +38,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link active text-white" aria-current="page" href="/pokemon-cards-boostrap"><img
-                                    src="/pokemon-cards-boostrap/assets/Pokeball.png" style="width: 5rem;" alt=""></a>
+                                    src="./assets/Pokeball.png" style="width: 5rem;" alt=""></a>
                         </li>
 
                         <li class="nav-item">
