--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="navbar-toggler border-5 border-white p-0 w-100 justify-content-end" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <a class="navbar-brand" href="#"><img src="assets/Pokeball.png" alt="logo" title="logo"
+                    <a class="navbar-brand" href="#"><img src="./assets/Pokeball.png" alt="logo" title="logo"
                             style="width: 5rem;"></a>
                 </button>
 
@@ -38,7 +38,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link active text-white" aria-current="page" href="#"><img
-                                    src="assets/Pokeball.png" style="width: 5rem;" alt=""></a>
+                                    src="./assets/Pokeball.png" style="width: 5rem;" alt=""></a>
                         </li>
 
                         <li class="nav-item">
@@ -56,13 +56,13 @@
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="pages/starter-kanto.html">Kanto</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 2</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 3</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 4</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 5</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 6</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 7</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 8</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Johto</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Hoenn</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Unova</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Kalos</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Alola</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Galar</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Generation 9</a></li>
                                 <li>
                                     <hr class="dropdown-divider bg-black">
@@ -93,7 +93,8 @@
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/kanto-starter/kanto-starters.png" class="card-img-top" alt="...">
+                            <img class="blur" src="assets/kanto-starter/kanto-starters.png" class="card-img-top"
+                                alt="...">
                         </div>
 
                         <div class="card-body text-center">
@@ -106,7 +107,8 @@
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/johto-starter/johto-starter.jpg" class="card-img-top" alt="...">
+                            <img class="blur" src="assets/johto-starter/johto-starter.jpg" class="card-img-top"
+                                alt="...">
                         </div>
 
                         <div class="card-body text-center">
@@ -119,7 +121,8 @@
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.jpg" class="card-img-top" alt="...">
+                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.jpg" class="card-img-top"
+                                alt="...">
                         </div>
 
                         <div class="card-body text-center">
