--- a/pages/starter-kanto.html
+++ b/pages/starter-kanto.html
@@ -56,13 +56,13 @@
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item text-white bg-black" href="starter-kanto.html">Kanto</a>
                                 </li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 2</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 3</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 4</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 5</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 6</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 7</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 8</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Johto</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Hoenn</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Unova</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Kalos</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Alola</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="#">Galar</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Generation 9</a></li>
                                 <li>
                                     <hr class="dropdown-divider bg-black">
