--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/pokemon-cards-boostrap/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -28,8 +28,8 @@
                 <button class="navbar-toggler border-5 border-white p-0 w-100 justify-content-end" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <a class="navbar-brand" href="#"><img src="/pokemon-cards-boostrap/assets/Pokeball.png" alt="logo"
-                            title="logo" style="width: 5rem;"></a>
+                    <a class="navbar-brand" href="#"><img src="assets/Pokeball.png" alt="logo" title="logo"
+                            style="width: 5rem;"></a>
                 </button>
 
                 <div class="collapse navbar-collapse justify-content-between bg-danger" id="navbarSupportedContent">
@@ -38,7 +38,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link active text-white" aria-current="page" href="#"><img
-                                    src="/pokemon-cards-boostrap/assets/Pokeball.png" style="width: 5rem;" alt=""></a>
+                                    src="assets/Pokeball.png" style="width: 5rem;" alt=""></a>
                         </li>
 
                         <li class="nav-item">
@@ -55,7 +55,7 @@
 
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item text-white bg-black"
-                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a></li>
+                                        href="pages/starter-kanto.html">Kanto</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Johto</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Hoenn</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
@@ -89,12 +89,12 @@
 
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="pages/starter-kanto.html">
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="/pokemon-cards-boostrap/assets/kanto-starter/kanto-starters.png"
-                                class="card-img-top" alt="...">
+                            <img class="blur" src="assets/kanto-starter/kanto-starters.png" class="card-img-top"
+                                alt="...">
                         </div>
 
                         <div class="card-body text-center">
@@ -107,8 +107,8 @@
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="/pokemon-cards-boostrap/assets/johto-starter/johto-starter.jpg"
-                                class="card-img-top" alt="...">
+                            <img class="blur" src="assets/johto-starter/johto-starter.jpg" class="card-img-top"
+                                alt="...">
                         </div>
 
                         <div class="card-body text-center">
@@ -121,8 +121,8 @@
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="/pokemon-cards-boostrap/assets/hoenn-starter/hoenn-starter.jpg"
-                                class="card-img-top" alt="...">
+                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.jpg" class="card-img-top"
+                                alt="...">
                         </div>
 
                         <div class="card-body text-center">
