--- a/pages/starter-johto.html
+++ b/pages/starter-johto.html
@@ -87,48 +87,25 @@
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
+
                 <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/bulbasaur.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/johto-starter/cyndaquill.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Bulbasaur</h5>
-                            <p class="card-text">Bulbasaur can be seen napping in bright sunlight. There is a seed on
-                                its
-                                back.
-                                By soaking up the sun's rays, the seed grows progressively larger.</p>
-                        </div>
-
-                        <div class="card-footer">
-                            <small class="text-muted">Pokémon Red/Green/Blue/Fire Red/Leaf Green</small>
-                        </div>
-
-                    </div>
-                </a>
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
-                    <div class="card">
-
-                        <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/squirtle.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body">
-                            <h5 class="card-title">Squirtle</h5>
-                            <p class="card-text">This Tiny Turtle Pokémon draws its long neck into its shell
-                                to
-                                launch
-                                incredible water attacks with amazing range and accuracy.The blasts can be quite
-                                powerful.
+                            <h5 class="card-title">Cyndaquil</h5>
+                            <p class="card-text">Cyndaquil protects itself by flaring up the flames on its back. The
+                                flames are vigorous if the Pokémon is angry. However, if it is tired, the flames
+                                splutter fitfully with incomplete combustion.
                             </p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Red/Green/Blue/Fire Red/Leaf Green</small>
+                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver</small>
                         </div>
 
                     </div>
@@ -137,66 +114,43 @@
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/charmander.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/johto-starter/totodile.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Charmander</h5>
-                            <p class="card-text">The flame that burns at the tip of its tail is an indication of its
-                                emotions.
-                                The flame wavers when Charmander is enjoying itself. If the Pokémon becomes enraged, the
-                                flame
-                                burns fiercely.</p>
+                            <h5 class="card-title">Totodile</h5>
+                            <p class="card-text">Despite the smallness of its body, Totodile's jaws are very powerful.
+                                While the Pokémon may think its is just playfully nipping, its bite has enough power to
+                                cause serious injury.</p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Red/Green/Blue/Fire Red/Leaf Green</small>
+                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver</small>
                         </div>
                     </div>
                 </a>
 
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="pokemon-cards-boostrap/pages/starter-kanto.html">
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/pikachu.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/johto-starter/chikorita.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Pikachu</h5>
+                            <h5 class="card-title">Chikorita</h5>
                             <p class="card-text">
-                                This Pokémon has electricity-storing pouches on its cheeks. These appear to become
-                                electrically charged during the night while Pikachu sleeps. It occasionally discharges
-                                electricity when it is dozy after waking up.</p>
+                                In battle, Chikorita waves its leaf around to keep the foe at bay. However, a sweet
+                                fragrance also wafts from the leaf, becalming the battling Pokémon and creating a cozy,
+                                friendly atmosphere all around.</p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Yellow/Let's Go Pikachu</small>
+                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver</small>
                         </div>
 
-                    </div>
-                </a>
-
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
-                    <div class="card">
-
-                        <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/eevee.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body">
-                            <h5 class="card-title">Eevee</h5>
-                            <p class="card-text">
-                                An Eevee has an unstable genetic makeup that suddenly mutates due to its environment.
-                                Radiation from various stones causes this Pokémon to evolve.</p>
-                        </div>
-
-                        <div class="card-footer">
-                            <small class="text-muted">Pokémon Let's Go Eevee</small>
-                        </div>
                     </div>
                 </a>
             </div>
