--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="pages/starter-kanto.html">Kanto</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Johto</a></li>
+                                <li><a class="dropdown-item text-white bg-black" href="pages/starter-johto.html">Johto</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Hoenn</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Unova</a></li>
@@ -103,7 +103,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="">
+                <a class="link-card" href="pages/starter-johto.html">
                     <div class="card w-100">
 
                         <div class="card-img">
