add-serebii-links-kanto-johto-pages

--- a/pages/starter-johto.html
+++ b/pages/starter-johto.html
@@ -83,12 +83,12 @@
 
     <main>
         <div class="text-white text-center">
-            <h1>Starter Pokémon Kanto</h1>
+            <h1>Starter Pokémon Johto</h1>
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/155.shtml">
                     <div class="card">
 
                         <div class="card-img">
@@ -110,7 +110,7 @@
 
                     </div>
                 </a>
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/totodile/">
                     <div class="card">
 
                         <div class="card-img">
@@ -131,7 +131,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/chikorita/">
                     <div class="card">
 
                         <div class="card-img">
