--- a/pages/starter-kanto.html
+++ b/pages/starter-kanto.html
@@ -87,7 +87,7 @@
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/bulbasaur/">
                     <div class="card">
 
                         <div class="card-img">
@@ -109,7 +109,7 @@
 
                     </div>
                 </a>
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/squirtle/">
                     <div class="card">
 
                         <div class="card-img">
@@ -133,7 +133,7 @@
 
                     </div>
                 </a>
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/charmander/">
                     <div class="card">
 
                         <div class="card-img">
@@ -156,7 +156,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/025.shtml">
                     <div class="card">
 
                         <div class="card-img">
@@ -179,7 +179,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="/pokemon-cards-boostrap/pages/starter-kanto.html">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/eevee/">
                     <div class="card">
 
                         <div class="card-img">
