--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
 
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item text-white bg-black"
-                                        href="pages/starter-kanto.html">Kanto</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="pages/starter-johto.html">Johto</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Hoenn</a></li>
+                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a>
+                                </li>
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-johto.html">Johto</a></li>
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-hoenn.html">Hoenn</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Unova</a></li>
                                 <li><a class="dropdown-item text-white bg-black" href="#">Kalos</a></li>
@@ -117,7 +120,7 @@
                     </div>
                 </a>
 
-                <a class="link-card" href="">
+                <a class="link-card" href="pages/starter-hoenn.html">
                     <div class="card w-100">
 
                         <div class="card-img">
