--- a/pages/starter-hoenn.html
+++ b/pages/starter-hoenn.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/pokemon-cards-boostrap/style.css">
-    <title>Starters Kanto</title>
+    <title>Starters Hoenn</title>
 </head>
 
 <body>
@@ -84,120 +84,74 @@
 
     <main>
         <div class="text-white text-center">
-            <h1>Starter Pokémon Kanto</h1>
+            <h1>Starter Pokémon Johto</h1>
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/bulbasaur/">
+
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/torchic">
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/bulbasaur.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/hoenn-starter/torchic.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Bulbasaur</h5>
-                            <p class="card-text">Bulbasaur can be seen napping in bright sunlight. There is a seed on
-                                its
-                                back.
-                                By soaking up the sun's rays, the seed grows progressively larger.</p>
-                        </div>
-
-                        <div class="card-footer">
-                            <small class="text-muted">Pokémon Red/Green/Blue/Fire Red/Leaf Green</small>
-                        </div>
-
-                    </div>
-                </a>
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/squirtle/">
-                    <div class="card">
-
-                        <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/squirtle.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body">
-                            <h5 class="card-title">Squirtle</h5>
-                            <p class="card-text">This Tiny Turtle Pokémon draws its long neck into its shell
-                                to
-                                launch
-                                incredible water attacks with amazing range and accuracy.The blasts can be quite
-                                powerful.
+                            <h5 class="card-title">Torchic</h5>
+                            <p class="card-text">Torchic sticks with its Trainer, following behind with unsteady steps.
+                                This Pokémon breathes fire of over 1,800 degrees F, including fireballs that leave the
+                                foe scorched black.
                             </p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Red/Green/Blue/Fire Red/Leaf Green</small>
+                            <small class="text-muted">Pokémon Ruby/Sapphire/Emerald/Omega Ruby/Alpha Sapphire</small>
                         </div>
 
                     </div>
                 </a>
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/charmander/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/treecko">
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/charmander.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/hoenn-starter/treecko.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Charmander</h5>
-                            <p class="card-text">The flame that burns at the tip of its tail is an indication of its
-                                emotions.
-                                The flame wavers when Charmander is enjoying itself. If the Pokémon becomes enraged, the
-                                flame
-                                burns fiercely.</p>
-                        </div>
-
-                        <div class="card-footer">
-                            <small class="text-muted">Pokémon Red/Green/Blue/Fire Red/Leaf Green</small>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="https://www.serebii.net/pokedex-sm/025.shtml">
-                    <div class="card">
-
-                        <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/pikachu.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body">
-                            <h5 class="card-title">Pikachu</h5>
+                            <h5 class="card-title">Treecko</h5>
                             <p class="card-text">
-                                This Pokémon has electricity-storing pouches on its cheeks. These appear to become
-                                electrically charged during the night while Pikachu sleeps. It occasionally discharges
-                                electricity when it is dozy after waking up.</p>
+                                Treecko has small hooks on the bottom of its feet that enable it to scale vertical
+                                walls. This Pokémon attacks by slamming foes with its thick tail.</p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Yellow/Let's Go Pikachu</small>
+                            <small class="text-muted">Pokémon Ruby/Sapphire/Emerald/Omega Ruby/Alpha Sapphire</small>
                         </div>
-
                     </div>
                 </a>
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/eevee/">
+                <a class="link-card" href="https://www.serebii.net/pokedex-xy/258.shtml">
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/kanto-starter/eevee.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/hoenn-starter/mudkip.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Eevee</h5>
+                            <h5 class="card-title">Mudkip</h5>
                             <p class="card-text">
-                                An Eevee has an unstable genetic makeup that suddenly mutates due to its environment.
-                                Radiation from various stones causes this Pokémon to evolve.</p>
+                                The fin on Mudkip's head acts as highly sensitive radar. Using this fin to sense
+                                movements of water and air, this Pokémon can determine what is taking place around it
+                                without using its eyes.</p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Let's Go Eevee</small>
+                            <small class="text-muted">Pokémon Ruby/Sapphire/Emerald/Omega Ruby/Alpha Sapphire</small>
                         </div>
+
                     </div>
                 </a>
             </div>
