--- a/pages/starter-hoenn.html
+++ b/pages/starter-hoenn.html
@@ -84,7 +84,7 @@
 
     <main>
         <div class="text-white text-center">
-            <h1>Starter Pokémon Johto</h1>
+            <h1>Starter Pokémon Hoenn</h1>
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
