add-dark-effect

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/johto-starter/johto-starter.jpg" class="card-img-top"
+                            <img class="blur" src="assets/johto-starter/johto-starter.png" class="card-img-top"
                                 alt="...">
                         </div>
 
@@ -124,7 +124,7 @@
                     <div class="card w-100">
 
                         <div class="card-img">
-                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.jpg" class="card-img-top"
+                            <img class="blur" src="assets/hoenn-starter/hoenn-starter.png" class="card-img-top"
                                 alt="...">
                         </div>
 
