--- a/pages/starter-sinnoh.html
+++ b/pages/starter-sinnoh.html
@@ -89,7 +89,7 @@
 
     <main>
         <div class="text-white text-center">
-            <h1>Starter Pokémon Hoenn</h1>
+            <h1>Starter Pokémon Sinnoh</h1>
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
