--- a/pages/starter-johto.html
+++ b/pages/starter-johto.html
@@ -106,7 +106,7 @@
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver</small>
+                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver/Legends Arceus</small>
                         </div>
 
                     </div>
