fix-header-link

--- a/index.html
+++ b/index.html
@@ -55,18 +55,30 @@
 
                             <ul class="dropdown-menu text-white bg-black" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item text-white bg-black"
-                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a>
-                                </li>
+                                        href="/pokemon-cards-boostrap/pages/starter-kanto.html">Kanto</a></li>
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-johto.html">Johto</a></li>
+
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-hoenn.html">Hoenn</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Sinnoh</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Unova</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Kalos</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Alola</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Galar</a></li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Generation 9</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-sinnoh.html">Sinnoh</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-unova.html">Unova</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-kalos.html">Kalos</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-alola.html">Alola</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-galar.html">Galar</a></li>
+
+                                <li><a class="dropdown-item text-white bg-black"
+                                        href="/pokemon-cards-boostrap/pages/starter-hisui.html">Hisui/a></li>
                                 <li>
                                     <hr class="dropdown-divider bg-black">
                                 </li>
