fix-index-header-link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                         href="/pokemon-cards-boostrap/pages/starter-galar.html">Galar</a></li>
 
                                 <li><a class="dropdown-item text-white bg-black"
-                                        href="/pokemon-cards-boostrap/pages/starter-hisui.html">Hisui/a></li>
+                                        href="/pokemon-cards-boostrap/pages/starter-hisui.html">Hisui</a></li>
                                 <li>
                                     <hr class="dropdown-divider bg-black">
                                 </li>
