add-hisui-page/fix-header-link

--- a/index.html
+++ b/index.html
@@ -79,10 +79,6 @@
 
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-hisui.html">Hisui</a></li>
-                                <li>
-                                    <hr class="dropdown-divider bg-black">
-                                </li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Something else here</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -213,6 +209,20 @@
 
                         <div class="card-body text-center">
                             <h5 class="card-title">Galar Starters</h5>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="link-card" href="pages/starter-hisui.html">
+                    <div class="card w-100">
+
+                        <div class="card-img">
+                            <img class="blur" src="assets/hisui-starter/starter-hisui.png" class="card-img-top"
+                                alt="...">
+                        </div>
+
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Hisui Starters</h5>
                         </div>
                     </div>
                 </a>
