--- a/pages/starter-johto.html
+++ b/pages/starter-johto.html
@@ -80,10 +80,6 @@
 
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-hisui.html">Hisui</a></li>
-                                <li>
-                                    <hr class="dropdown-divider bg-black">
-                                </li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Something else here</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -118,11 +114,14 @@
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver/Legends Arceus</small>
+                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver/Legends
+                                Arceus</small>
                         </div>
 
                     </div>
                 </a>
+
+
                 <a class="link-card" href="https://www.serebii.net/pokedex-swsh/totodile/">
                     <div class="card">
 
