--- a/pages/starter-hisui.html
+++ b/pages/starter-hisui.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/pokemon-cards-boostrap/style.css">
-    <title>Starters Galar</title>
+    <title>Starters Hisui</title>
 </head>
 
 <body>
@@ -80,10 +80,6 @@
 
                                 <li><a class="dropdown-item text-white bg-black"
                                         href="/pokemon-cards-boostrap/pages/starter-hisui.html">Hisui</a></li>
-                                <li>
-                                    <hr class="dropdown-divider bg-black">
-                                </li>
-                                <li><a class="dropdown-item text-white bg-black" href="#">Something else here</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -96,72 +92,75 @@
 
     <main>
         <div class="text-white text-center">
-            <h1>Starter Pokémon Galar</h1>
+            <h1>Starter Pokémon Hisui</h1>
         </div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="d-flex flex-wrap card-container">
 
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/scorbunny">
-                    <div class="card">
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/501.shtml">
+                    <div class=" card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/galar-starter/scorbunny.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/unova-starter/oshawott.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Scorbunny</h5>
-                            <p class="card-text">A warm-up of running around gets fire energy coursing through this
-                                Pokémon's body. Once that happens, it's ready to fight at full power.
+                            <h5 class="card-title">Oshawott</h5>
+                            <p class="card-text">
+                                It fights using the scalchop on its stomach. In response to an attack, it retaliates
+                                immediately by slashing.</p>
+                        </div>
+
+                        <div class="card-footer">
+                            <small class="text-muted">Pokémon Black/White/Black 2/White 2/Legends Arceus</small>
+                        </div>
+
+                    </div>
+                </a>
+
+
+                <a class="link-card" href="https://www.serebii.net/pokedex-sm/155.shtml">
+                    <div class="card">
+
+                        <div class="card-img">
+                            <img src="/pokemon-cards-boostrap/assets/johto-starter/cyndaquill.png" class="card-img-top"
+                                alt="...">
+                        </div>
+
+                        <div class="card-body">
+                            <h5 class="card-title">Cyndaquil</h5>
+                            <p class="card-text">Cyndaquil protects itself by flaring up the flames on its back. The
+                                flames are vigorous if the Pokémon is angry. However, if it is tired, the flames
+                                splutter fitfully with incomplete combustion.
                             </p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Sword/Shield</small>
+                            <small class="text-muted">Pokémon Gold/Silver/Crystal/Heart Gold/Soul Silver/Legends
+                                Arceus</small>
                         </div>
 
                     </div>
                 </a>
 
-
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/sobble">
+                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/rowlet">
                     <div class="card">
 
                         <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/galar-starter/sobble.png" class="card-img-top"
+                            <img src="/pokemon-cards-boostrap/assets/alola-starter/rowlet.png" class="card-img-top"
                                 alt="...">
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Sobble</h5>
-                            <p class="card-text">
-                                When scared, this Pokémon cries. Its tears pack the chemical punch of 100 onions, and
-                                attackers won't be able to resist weeping.</p>
+                            <h5 class="card-title">Rowlet</h5>
+                            <p class="card-text">During the day, it builds up energy via photosynthesis. At night, it
+                                flies silently through the sky, on the prowl for prey.
+                            </p>
                         </div>
 
                         <div class="card-footer">
-                            <small class="text-muted">Pokémon Sword/Shield</small>
-                        </div>
-                    </div>
-                </a>
-
-                <a class="link-card" href="https://www.serebii.net/pokedex-swsh/grookey">
-                    <div class=" card">
-
-                        <div class="card-img">
-                            <img src="/pokemon-cards-boostrap/assets/galar-starter/grookey.png" class="card-img-top"
-                                alt="...">
-                        </div>
-
-                        <div class="card-body">
-                            <h5 class="card-title">Grookey</h5>
-                            <p class="card-text">
-                                When it uses its special stick to strike up a beat, the sound waves produced carry
-                                revitalizing energy to the plants and flowers in the area.</p>
-                        </div>
-
-                        <div class="card-footer">
-                            <small class="text-muted">Pokémon Sword/Shield</small>
+                            <small class="text-muted">Pokémon Sun/Moon/Ultra Sun/Ultra Moon/Legends Arceus</small>
                         </div>
 
                     </div>
