--- a/pages/starter-unova.html
+++ b/pages/starter-unova.html
@@ -32,7 +32,7 @@
                             title="logo" style="width: 5rem;"></a>
                 </button>
 
-                <div class="collapse navbar-collapse justify-content-between bg-danger" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
 
                     <ul class="navbar-nav align-items-center fs-4">
 
